# swarm-emotions-tag

./: .dockerignore  .env.example  .gitattributes  .gitignore  Makefile  README.md  dev-watchers.sh  docker-compose.override.yml  docker-compose.yml  stop-watchers.sh
conductor/: index.md  product.md  tech-stack.md  tracks.md
docker/: Dockerfile.emotion-engine  Dockerfile.orchestrator  Dockerfile.python-ml  init.sql
docs/: EmotionRAG_GoRust_Implementation (1).md  EmotionRAG_Multiagent_Architecture (2).md  PLANO_IMPLEMENTACAO.md
emotion-engine/: Cargo.toml  build.rs
emotion-engine/benches/: hot_path.rs
emotion-engine/config/: default_fsm.toml
emotion-engine/config/presets/: empathic.toml  reactive.toml  resilient.toml
emotion-engine/src/: lib.rs  main.rs  proto.rs  server.rs
emotion-engine/src/fsm/: config.rs  constraints.rs  mod.rs  state.rs  transition.rs
emotion-engine/src/promotion/: evaluator.rs
emotion-engine/src/scoring/: fusion.rs
emotion-engine/src/vector/: compute.rs  decay.rs  emotion.rs  matrix.rs  mod.rs  similarity.rs
emotion-engine/tests/: fsm_tests.rs  integration_tests.rs  promotion_tests.rs  scoring_tests.rs  smoke_test.rs  stability_tests.rs  vector_tests.rs
emotion-engine/tests/common/: mod.rs
orchestrator/: go.mod  go.sum
python-ml/: pyproject.toml
python-ml/app/: classifier.py  embedder.py  main.py  runtime.py
python-ml/emotion_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python-ml/tests/: test_classifier.py  test_runtime.py
python-ml/tools/: benchmark_classifier.py
scripts/: python_ml_gpu_long_run.sh  (+4 more)
(+118 files in other folders)
